# Forge

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  README_EN.md  config.py  docker-compose.yml  forge.yaml.example  main.py  metrics.registry.yaml  pyproject.toml  schema.registry.json
.github/workflows/: ci.yml
agent/: agent.py  audit.py  db.py  feishu.py  knowledge.py  llm.py  pipeline.py  prompts.py  prompts_v2.py  session.py  tenant.py
agent/memory/: __init__.py  ems.py  extractor.py  smp.py  wmb.py
agent/prompt_examples/: antijoin.md  basic_query.md  cte.md  filter_or.md  topn.md  window_lag.md
demo/: seed.py  seed_large.py
docs/: architecture.md  benchmark_failure_analysis_2026-03-18.md  benchmarks.md  development.md  dsl-semantics.md  feishu-setup.md  how-it-works.md  memory-architecture.md  optimization_plan_2026-03-19.md  philosophy.md  pipeline-architecture.md  registry.md  semantic-layer-template.md
forge/: __init__.py  cache.py  chart.py  cli.py  compiler.py  executor.py  lint.py  retriever.py  schema.json  schema_builder.py  sync.py
registry/: __init__.py  business_context.py  business_context.yaml  staging_sync.py  sync.py  validator.py
scripts/: bot.sh  demo-setup.sh  export_conversation.py  seed_mock_data.py
tests/: conftest.py  test_agent_logic.py  test_api.py  test_compiler.py  test_compiler_extended.py  test_compiler_window.py  test_e2e.py  test_metric_validator.py  test_registry_context.py  test_session.py  test_staging_sync.py  test_sync.py
tests/accuracy/: grade.py  (+9 more)
web/: __init__.py  auth.py  feishu.py  router.py
(+141 files in other folders)
