[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
